# Moosync

./: .bazelignore  .bazelrc  .eslintrc.js  .gitignore  .gitmodules  .licensesnip  .licensesnipignore  :GITHUB_ENV  BUILD  Cargo.toml  MODULE.bazel  README.md  REPO.bazel  Trunk.toml  WORKSPACE  build.rs  build.sh  buildext.bat  buildext.sh  crowdin.yml  discover_bazel_rust_project.sh  features.txt  html-fallback.ts  index.html  licensesnip.config.jsonc  package.json  preferenceWindow.html  rollup.conf.js  rustfmt.toml  snapcraft.yaml  tsconfig.json  version.bzl  vite.config.ts
core/database/: BUILD  Cargo.toml  build.rs
core/database/src/: BUILD.bazel  cache.rs  cache_schema.rs  database.rs  lib.rs  macros.rs  migrations.rs  models.rs  schema.rs  test.rs
core/extensions/: BUILD  Cargo.toml
core/extensions/src/: BUILD.bazel  errors.rs  ext_runner.rs  lib.rs  models.rs  sample_tests.rs  tests.rs
core/file_scanner/: BUILD  Cargo.toml
core/file_scanner/src/: BUILD.bazel  playlist_scanner.rs  scanner.rs  scanner_android.rs  song_scanner.rs  tests.rs  types.rs  utils.rs
core/lyrics/: BUILD  Cargo.toml
core/lyrics/src/: BUILD.bazel  lib.rs  test.rs
core/rodio-player/: Cargo.toml
core/rodio-player/src/: BUILD.bazel  decoder.rs  lib.rs
core/themes/: BUILD  Cargo.toml
core/themes/src/: BUILD.bazel  lib.rs  test.rs  themes.rs
core/types/: BUILD  Cargo.toml
core/types/protos/: BUILD  extensions.proto  package.json  pnpm-lock.yaml  songs.proto  themes.proto  ui.proto
core/types/src/: cache.rs  common.rs  entities.rs  extensions.rs  lib.rs  preferences.rs  songs.rs  tests.rs  themes.rs
lib/tauri-plugin-audioplayer/: BUILD.bazel  Cargo.toml  README.md  build.rs
lib/tauri-plugin-audioplayer/android/: .gitignore  .project  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
lib/tauri-plugin-audioplayer/permissions/: default.toml
lib/tauri-plugin-audioplayer/src/: BUILD.bazel  desktop.rs  lib.rs  mobile.rs
lib/tauri-plugin-file-scanner/: BUILD.bazel  Cargo.toml  README.md  build.rs
lib/tauri-plugin-file-scanner/android/: .project  build.gradle.kts  consumer-rules.pro  settings.gradle
lib/tauri-plugin-file-scanner/permissions/: default.toml
lib/tauri-plugin-file-scanner/src/: BUILD.bazel  desktop.rs  lib.rs  mobile.rs
lib/tauri-plugin-self-update/: BUILD.bazel  Cargo.toml  README.md  build.rs
lib/tauri-plugin-self-update/android/: build.gradle.kts
lib/tauri-plugin-self-update/permissions/: default.toml
lib/tauri-plugin-self-update/src/: BUILD.bazel  desktop.rs  lib.rs  mobile.rs  models.rs
modules/: crates.MODULE.bazel  external_deps.MODULE.bazel  frontend_toolchains.MODULE.bazel  rust_toolchains.MODULE.bazel  wasm_crates.MODULE.bazel
src-tauri/: Cargo.toml  build.rs  features.txt  flamegraph.html  function_details.json  moosync.desktop  tauri.conf.json  test.rs
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/database/: Cargo.toml  build.rs  diesel.toml  diesel_cache.toml
src-tauri/database/src/: cache.rs  database.rs  lib.rs  migrations.rs  schema.rs  test.rs
src-tauri/extensions/: Cargo.toml
src-tauri/extensions/src/: ext_runner.rs  lib.rs  request_handler.rs  socket_handler.rs
src-tauri/file_scanner/: Cargo.toml
src-tauri/file_scanner/src/: lib.rs  playlist_scanner.rs  scanner.rs  scanner_android.rs  song_scanner.rs  tests.rs  types.rs  utils.rs
src-tauri/librespot/: Cargo.toml
src-tauri/librespot/src/: canvaz.rs  lib.rs  player.rs  spirc.rs  utils.rs
src-tauri/lyrics/: Cargo.toml
src-tauri/lyrics/src/: lib.rs  test.rs
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: command_macro.rs  database_macro.rs  lib.rs
src-tauri/migrations/2024-02-11-011442_initial/: up.sql
src-tauri/migrations/2024-02-11-011529_triggers/: up.sql
src-tauri/migrations_cache/2024-02-13-192104_initial/: down.sql  up.sql
src-tauri/mpris/: Cargo.toml
src-tauri/mpris/src/: lib.rs  mpris.rs  mpris_android.rs
src-tauri/preferences/: Cargo.toml
src-tauri/preferences/src/: lib.rs  preferences.rs  schema.json  test.rs
src-tauri/rodio-player/: Cargo.toml  build.rs
src-tauri/rodio-player/src/: decoder.rs  lib.rs  test.rs
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/db/: cache.rs  cache_schema.rs  database.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/errors/: errors.rs
src-tauri/src/extensions/: mod.rs  request_handler.rs
src-tauri/src/librespot/: mod.rs
src-tauri/src/logger/: logger.rs  mod.rs
src-tauri/src/lyrics/: mod.rs
src-tauri/src/macros/: command_macro.rs  database_macro.rs
src-tauri/src/mobile_player/: mod.rs
src-tauri/src/mpris/: mod.rs
src-tauri/src/oauth/: handler.rs
src-tauri/src/preference_holder/: mod.rs  preferences.rs
src-tauri/src/providers/: common.rs  extension.rs  handler.rs  mod.rs  spotify.rs  youtube.rs
src-tauri/src/rodio/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/themes/: mod.rs
src-tauri/src/types/: cache.rs  entities.rs  mod.rs  songs.rs
src-tauri/src/updater/: mobile.rs  mod.rs
src-tauri/src/window/: handler.rs  mod.rs
src-tauri/src/youtube/: mod.rs  youtube.rs
src-tauri/tauri-invoke-proc/: Cargo.toml  build.rs
src-tauri/tauri-invoke-proc/src/: common.rs  core.rs  lib.rs  ui.rs
src-tauri/themes/: Cargo.toml
src-tauri/themes/src/: lib.rs  test.rs  themes.rs
src-tauri/types/: Cargo.toml
src-tauri/types/src/: cache.rs  cache_schema.rs  canvaz.rs  common.rs  entities.rs  extensions.rs  lib.rs  oauth.rs  preferences.rs  schema.rs  songs.rs  themes.rs  window.rs
src-tauri/youtube/: Cargo.toml
src-tauri/youtube/src/: lib.rs  raw_parser.rs  test.rs  types.rs  youtube.rs
tauri/: .gitignore  BUILD  BUILD.bazel  Cargo.toml  build.rs  function_details.json  tauri.conf.json
tauri/capabilities/: default.json  desktop.json  migrated.json
tauri/src/: lib.rs  macros.rs  main.rs
tauri/src/db/: mod.rs
tauri/src/extensions/: BUILD.bazel  mod.rs  request_handler.rs
tauri/src/librespot/: BUILD.bazel  mod.rs
tauri/src/logger/: BUILD.bazel  mod.rs
tauri/src/lyrics/: mod.rs
tauri/src/mpris/: mod.rs  (+1 more)
(+952 files in other folders)
