[package]
name = "Moosync-ui"
version = "0.0.0"
edition = "2021"

[features]
mock = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getrandom = "=0.2.10"
console_error_panic_hook = "0.1.7"

leptos = { version = "0.7.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
types = { path = "src-tauri/types", default-features = false, features = [
    "ui",
] }
chrono = "0.4.40"
leptos-use = "0.15.6"
tokio = { version = "1.43.0", features = ["rt", "sync"] }
serde_json = "1.0.140"
leptos_router = { version = "0.7.7" }
leptos_virtual_scroller = { git = "https://github.com/Ovenoboyo/leptos_virtual_scroller" }
leptos_context_menu = { git = "https://github.com/Ovenoboyo/leptos_context_menu" }
futures = "0.3.31"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "CssStyleDeclaration",
] }
regex = "1.11.1"
colors-transform = "0.2.11"
leptos_i18n = { git = "https://github.com/Ovenoboyo/leptos_i18n", features = ["csr", "interpolate_display", "json_files"], default_features = false }
pref_gen = { path = "src/pref_gen" }
rand = "0.8.5"
dyn-clone = "1.0.19"
itertools = "0.14.0"
bitcode = { version = "0.6.5" }
indexed_db_futures = { version = "0.6.0", features = ["serde"] }
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tauri-invoke-proc = { path = "src-tauri/tauri-invoke-proc" }
url-escape = "0.1.1"
wasm-timer = "0.2.5"
uuid = "=1.11.1"

[workspace]
resolver = "2"
exclude = [
    "lib/extensions-wasm/wasm-extension-py/python-pdk/lib",
    "lib/extensions-wasm/wasm-extension-py/python-pdk/bin",
    "lib/extensions-wasm/wasm-extension-rs",
    "lib/tauri-plugin-audioplayer/android/librespot-jni",
]
members = [
    "src-tauri",
    "src-tauri/database",
    "src-tauri/extensions",
    "src-tauri/file_scanner",
    "src-tauri/librespot",
    "src-tauri/lyrics",
    "src-tauri/macros",
    "src-tauri/mpris",
    "src-tauri/preferences",
    "src-tauri/themes",
    "src-tauri/types",
    "src-tauri/youtube",
    "src-tauri/rodio-player",
    "src/pref_gen",
    "src-tauri/tauri-invoke-proc",
    "lib/tauri-plugin-file-scanner",
    "lib/tauri-plugin-audioplayer",
]

[package.metadata.leptos-i18n]
default = "en_US"
locales = [
    "af_ZA",
    "ar_SA",
    "ca_ES",
    "cs_CZ",
    "da_DK",
    "de_DE",
    "el_GR",
    "en_US",
    "es_ES",
    "fi_FI",
    "fr_FR",
    "he_IL",
    "hi_IN",
    "hu_HU",
    "it_IT",
    "ja_JP",
    "ko_KR",
    "nl_NL",
    "no_NO",
    "pl_PL",
    "pt_BR",
    "pt_PT",
    "ro_RO",
    "ru_RU",
    "sr_SP",
    "sv_SE",
    "tr_TR",
    "uk_UA",
    "vi_VN",
    "zh_CN",
    "zh_TW",
]

[profile.dev]

[profile.release]
strip = true
debug = 0
opt-level = 3
lto = true
incremental = false
codegen-units = 1
