module(
    name = "moosync",
    version = "11.0.2",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.40.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_prost", version = "0.68.1")
bazel_dep(name = "protobuf", version = "29.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_perl", version = "0.5.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "aspect_rules_js", version = "2.0.0")
bazel_dep(name = "aspect_rules_ts", version = "3.1.0")
bazel_dep(name = "rules_nodejs", version = "6.2.0")
bazel_dep(name = "aspect_rules_rollup", version = "2.0.1")
bazel_dep(name = "gzgz_rules_sass", version = "1.0.4")
bazel_dep(name = "nasm", version = "2.16.03.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_appimage", version = "1.19.0")
bazel_dep(name = "bazel_env.bzl", version = "0.1.1")
bazel_dep(name = "rpmpack", version = "0.6.0")
git_override(
    module_name = "rpmpack",
    commit = "2467806670a618497006ff8d8623b0430c7605a9",
    remote = "https://github.com/google/rpmpack.git",
)

include("//modules:external_deps.MODULE.bazel")
include("//modules:rust_toolchains.MODULE.bazel")
include("//modules:frontend_toolchains.MODULE.bazel")
include("//modules:crates.MODULE.bazel")
include("//modules:wasm_crates.MODULE.bazel")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    ts_version_from = "//ui/gen_dist:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "proto_npm",
    pnpm_lock = "//core/types/protos:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "proto_npm")
