single_version_override(
    module_name = "rules_foreign_cc",
    patch_strip = 1,
    patches = [
        "//patches:0001-Fix-pkgconfig_build.bzl-for-Windows-build-with-Bzlmod.patch",
    ],
)

# single_version_override(
#     module_name = "rules_rust_prost",
#     patch_strip = 1,
#     patches = ["//patches:rules_rust_prost_rust_deps.patch"],
# )

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "linuxdeploy_x86_64",
    executable = True,
    urls = ["https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage"],
)

http_file(
    name = "linuxdeploy_arm64",
    executable = True,
    urls = ["https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-aarch64.AppImage"],
)

http_file(
    name = "linuxdeploy_plugin_gtk",
    executable = True,
    urls = ["https://raw.githubusercontent.com/linuxdeploy/linuxdeploy-plugin-gtk/master/linuxdeploy-plugin-gtk.sh"],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ffmpeg_7_0",
    build_file_content = """
filegroup(
name = "all_srcs",
srcs = glob(["**"]),
visibility = ["//visibility:public"],
)
""",
    sha256 = "5621ac5518d2444626371c3d8beee49a977edff5459d95b600c058d57addcc5b",
    strip_prefix = "FFmpeg-release-7.0",
    urls = ["https://github.com/FFmpeg/FFmpeg/archive/refs/heads/release/7.0.zip"],
)

http_archive(
    name = "libogg",
    build_file_content = """
filegroup(
name = "all_srcs",
srcs = glob(["**"]),
visibility = ["//visibility:public"],
)
""",
    sha256 = "83e6704730683d004d20e21b8f7f55dcb3383cdf84c0daedf30bde175f774638",
    strip_prefix = "libogg-1.3.6",
    urls = ["https://downloads.xiph.org/releases/ogg/libogg-1.3.6.tar.gz"],
)

http_archive(
    name = "libvorbis",
    build_file_content = """
filegroup(
name = "all_srcs",
srcs = glob(["**"]),
visibility = ["//visibility:public"],
)
""",
    sha256 = "0e982409a9c3fc82ee06e08205b1355e5c6aa4c36bca58146ef399621b0ce5ab",
    strip_prefix = "libvorbis-1.3.7",
    urls = ["https://downloads.xiph.org/releases/vorbis/libvorbis-1.3.7.tar.gz"],
)

http_archive(
    name = "openssl",
    build_file_content = """
filegroup(
name = "all_srcs",
srcs = glob(["**"]),
visibility = ["//visibility:public"],
)
""",
    sha256 = "777cd596284c883375a2a7a11bf5d2786fc5413255efab20c50d6ffe6d020b7e",
    strip_prefix = "openssl-3.3.1",
    urls = ["https://github.com/openssl/openssl/releases/download/openssl-3.3.1/openssl-3.3.1.tar.gz"],
)

http_archive(
    name = "lame",
    build_file_content = """
filegroup(
name = "all_srcs",
srcs = glob(["**"]),
visibility = ["//visibility:public"],
)
""",
    sha256 = "ddfe36cab873794038ae2c1210557ad34857a4b6bdc515785d1da9e175b1da1e",
    strip_prefix = "lame-3.100",
    urls = ["https://downloads.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz"],
)

http_archive(
    name = "opus",
    build_file_content = """
filegroup(
name = "all_srcs",
srcs = glob(["**"]),
visibility = ["//visibility:public"],
)
""",
    sha256 = "65c1d2f78b9f2fb20082c38cbe47c951ad5839345876e46941612ee87f9a7ce1",
    strip_prefix = "opus-1.5.2",
    urls = ["https://downloads.xiph.org/releases/opus/opus-1.5.2.tar.gz"],
)
