[package]
name = "moosync"
edition = "2021"
version = "0.0.0"
authors = ["you"]
description = "A Tauri App"

[dependencies]
async-trait = "0.1.85"
chrono = { default-features = false, version = "0.4.39" }
futures = { default-features = false, version = "0.3.31" }
iso8601 = { default-features = false, version = "0.6.1" }
open = "5.3.2"
rspotify = { version = "0.14.0" }
serde_json = { default-features = false, version = "1.0" }
tracing-appender = "0.2.3"
url = "2.5.4"
database = { path = "./database" }
extensions = { path = "./extensions" }
file_scanner = { path = "./file_scanner" }
librespot = { path = "./librespot" }
lyrics = { path = "./lyrics" }
macros = { path = "./macros" }
mpris = { path = "./mpris" }
preferences = { path = "./preferences" }
themes = { path = "./themes" }
types = { path = "./types" }
youtube = { path = "./youtube" }
rodio-player = { path = "./rodio-player" }
google-youtube3 = "6.0.0"
oauth2 = { default-features = false, version = "4.4.2", features = ["reqwest"] }
regex = { default-features = false, version = "1.11.1" }
reqwest = { default-features = false, version = "0.12.12" }
serde = { default-features = false, version = "1.0" }
tauri = { version = "2.2.1", features = [
    "common-controls-v6",
    "wry",
    "protocol-asset",
    "tray-icon",
    "devtools",
], default-features = false }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-file-scanner = { path = "../lib/tauri-plugin-file-scanner" }
tauri-plugin-audioplayer = { path = "../lib/tauri-plugin-audioplayer" }

tracing = { default-features = false, version = "0.1.41" }
tracing-subscriber = { features = [
    "ansi",
    "env-filter",
], default-features = false, version = "0.3.19" }
rustls = { version = "0.23.21", features = ["ring"] }
tauri-invoke-proc = { path = "./tauri-invoke-proc" }
openssl-sys = { version = "*", features = ["vendored"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
uuid = "1.11.1"
clap = { version = "4.5.26", features = ["derive"] }
tauri-plugin-devtools = "2.0.0"
tokio = { version = "1.43.0", features = ["sync"] }

[build-dependencies.tauri-build]
version = "2.0.5"
features = []

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.3.1"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "2.0.1"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
required-features = []
